[package]
name = "flatfs"
version = "0.1.0"
edition = "2021"
description = "A readonly filesystem."
repository = "https://github.com/lasiotus/flatfs"
keywords = ["filesystem", "no_std"]
categories = ["filesystem", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.8"

